--- a/CSS/remove-dotted-border-links.css
+++ b/CSS/remove-dotted-border-links.css
@@ -1,2 +1,2 @@
-/* removes ugly dotted border of links but may make template more unsuable, up to you if you want to keep it! */
+/* removes ugly dotted border of links but may make template more unusable, up to you if you want to keep it! */
 *:focus{outline:none;}
